# stripe-fastapi

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
src/eldercrank/stripe/fastapi/: __init__.py  router.py
tests/: test_router.py
