[project]
name = "eldercrank-stripe-fastapi"
version = "0.1.0"
description = "FastAPI integration for the eldercrank-stripe library, providing easy webhook handling for Stripe events in FastAPI applications."
readme = "README.md"
authors = [
    { name = "Shawn", email = "shawn@shawngrover.ca" }
]
requires-python = ">=3.13"
dependencies = [
    "eldercrank-stripe-core",
    "fastapi>=0.128.0",
]
license = {text = "MIT"}
keywords = ["stripe", "fastapi", "webhook", "payment-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/eldercrank/stripe-fastapi"
Repository = "https://github.com/eldercrank/stripe-fastapi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eldercrank"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.uv.sources]
eldercrank-stripe-core = { path = "../eldercrank-stripe-core" }

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
